tests/errors/syn_cases12.java
public class syn_cases12 {
public static void main(String[] args){
switch(args.length){
default :
}
}
}